--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "dependencies": {
     "cors": "^2.8.4",
     "es6-promise": "^4.1.1",
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "test": "ava",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
